apps/immich/immich.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: immich
