apps/immich/ingress.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: immich
  namespace: istio-ingress
spec:
  selector:
    istio: ingress
  servers:
    - hosts:
        - 'immich.home.arpa'
      port:
        name: http
        number: 80
        protocol: HTTP
    - hosts:
        - 'immich.home.arpa'
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: immich-tls

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: immich
  namespace: istio-ingress
spec:
  gateways:
  - immich
  hosts:
  - 'immich.home.arpa'
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: immich-server.immich.svc.cluster.local
        port:
          number: 2283
